--- a/src/makesepnpy.ipynb
+++ b/src/makesepnpy.ipynb
@@ -2,52 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mymodule import myfunc as mf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv(\"../txt/labels0/test.csv\")\n",
+    "# df = pd.read_csv(\"../txt/labels0/test.csv\")\n",
+    "df = pd.read_csv(\"../txt/labels0/snap77_not_10;100.csv\")\n",
     "root_dir = \"../\"\n",
     "\n",
     "target =\"magfieldx\"\n",
-    "outdir = \"../imgout/test1227/\"\n",
+    "# outdir = \"../imgout/test1227/\"\n",
+    "outdir = \"../imgout/0106ML0/\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_147.452\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_121.625\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_89.432\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_102.420\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_42.607\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_51.562\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.13.13_65.580\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.6_47.773\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.12.13_77.455\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.12.13_104.432\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.12.13_114.607\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.12.13_147.452\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.3_47.773\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.3_82.620\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.3_130.410\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.5_47.773\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.7.13_91.427\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.7.13_115.616\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.7.13_127.625\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.7.13_144.423\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.7.13_11.486\n",
-      "../imgout/test_1227/magfieldx/magfieldx_49.10.4_47.773\n"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9944\\1316306396.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msnap\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpara\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjob\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"snappath\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"dataset\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"para\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"job\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mdftemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"snappath\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m\u001b[0msnap\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgen_snap_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"para\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"job\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"dataset\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mxlow\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mxup\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mylow\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0myup\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcenterx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcentery\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"xlow\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"xup\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ylow\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"yup\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"centerx\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdftemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"centery\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mseparated_im\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mim\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mylow\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0myup\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mxlow\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mxup\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\myfunc.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(filename, z)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[0mz\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[0mでz方向が3のデータを1層だけ読み込む\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \"\"\"\n\u001b[1;32m---> 66\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"npy\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
@@ -86,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1 (default, Dec 10 2018, 22:54:23) [MSC v.1915 64 bit (AMD64)]"
+   "version": "3.7.1"
   },
   "orig_nbformat": 4,
   "vscode": {
